Fix for our-work page on iphone

--- a/styles/components/logo-grid.scss
+++ b/styles/components/logo-grid.scss
@@ -1,6 +1,7 @@
 .logo-grid {
   text-align: center;
   margin-bottom: 25px;
+  overflow: hidden;
   
   .small-title {
     color: $red;
